--- a/5. catalog/templates/albums.html
+++ b/5. catalog/templates/albums.html
@@ -1,68 +1,44 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ genre.name }}
-			</h1>
-
-		</div>
-	</div>
+<div class = "title_block">
+	<h1 class = "page_title"><span>&#9733 {{ genre.name }} &#9733</span></h1>
+</div>
 
 <div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
-      {% if messages %}
+	{% with messages = get_flashed_messages() %}
+    	{% if messages %}
           
-        <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
-        </ul>
+    		<ul>
+    		{% for message in messages %}
+    			<li> <strong> {{ message }} </strong> </li>
+    		{% endfor %}
+        	</ul>
         {% endif %}
     {% endwith %}
-
 </div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<a href="{{url_for('editGenre', genre_id = genre.id )}}">
-				<button class="btn btn-default" id="new-menu-item">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Edit Genre
-				</button>
-			</a>
-			<br/>
-			<br/>
-			<a href="{{url_for('newAlbum', genre_id = genre.id )}}">
-				<button class="btn btn-default" id="new-menu-item">
-					<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>Add a New {{genre.name}} Album
-				</button>
-			</a>
-		</div>
-		<div class="col-md-7"></div>
-	</div>
+	<a class = "genres" href="{{url_for('editGenre', genre_id = genre.id )}}">
+		Edit Genre
+	</a>
+	<a class="genres" href="{{url_for('newAlbum', genre_id = genre.id )}}">
+		Add a New {{genre.name}} Album
+	</a>
 	
 	{% if albums !=[] %}	
-		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-3">
-					{% for i in albums %}
-							<div class="menu-item">
-								<h3>{{i.name}}</h3>
-								<p>Added by: {{i.user.name}}</p>
-								<a href="{{url_for('editalbum', genre_id = genre.id, album_id = i.id)}}">edit</a>
-								<a href="{{url_for('deletealbum', genre_id = genre.id, album_id = i.id)}}">delete</a>
-								<p>{{i.artist}}</p>
-								<p>{{i.year}}</p>
-								<img src='{{i.image_address}}'>
-								<p>{{i.description}}</p>
-							</div>
-					{% endfor %}
+		{% for i in albums %}
+			<div class="albums">
+				<div class="edit_delete_albums">
+					<a class ="edit" href="{{url_for('editalbum', genre_id = genre.id, album_id = i.id)}}">edit</a>
+					<a class ="delete" href="{{url_for('deletealbum', genre_id = genre.id, album_id = i.id)}}">delete</a>
+				</div>
+				<h2>{{i.name}}</h2>
+				<p>Added by: {{i.user.name}}</p>
+				<p>{{i.artist}}</p>
+				<p>{{i.year}}</p>
+				<img class = "album_cover" src='{{i.image_address}}'>
+				<p class="Description">Description: {{i.description}}</p>
 			</div>
-			
-			</div>
-			<div class="col-md-1"></div>
+		{% endfor %}
 	{% endif %}
+{% include "footer.html" %}
 {% endblock %}
