--- a/5. catalog/templates/deletegenre.html
+++ b/5. catalog/templates/deletegenre.html
@@ -4,14 +4,12 @@
 <h2> Are you sure you want to delete {{genre.name}}? </h2>
 
 <form action="#" method = 'post'>
-
-	<button type="submit" class="btn btn-default delete" id="submit" type="submit">
-	<span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete</button>
-	<a href = '{{url_for('showGenre')}}'>
-		<button class="btn btn-default delete">
-		<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
-	</a>
-
+	<div class="edit_area">
+		<button type="submit" class="button" id="submit" type="submit">Delete</button>
+		<a href = '{{url_for('showGenre')}}'>
+			<button class="button">Cancel</button>
+		</a>
+	</div>
 </form>
-
+{% include "footer.html" %}
 {% endblock %}
