--- a/5. catalog/templates/editgenre.html
+++ b/5. catalog/templates/editgenre.html
@@ -1,29 +1,16 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>Edit {{genre.name}}</h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6 col-md-offset-1 padding-top">
+<h2> Edit {{ genre.name }}: </h2>
+	<div class="edit_area">
 			<form action="{{ url_for('editGenre', genre_id = genre.id)}}" method = "post">
-				<div class="form-group">
 					<label for="name">Name:</label>
 					<input type ="text" class="form-control" name="name" value="{{genre.name }}">
-					<div class="padding-bottom"></div>
-					<button type="submit" class="btn btn-default" id="submit" type="submit">
-					<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>Save</button>
+					<button type="submit" class="button" id="submit" type="submit">Save</button>
 					<a href = '{{url_for('showGenre')}}'>
-						<button class="btn btn-default delete">
-						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Cancel</button>
+						<button class="button"> Cancel</button>
 					</a>
-				</div>
 			</form>
-		</div>
 	</div>
+{% include "footer.html" %}
 {% endblock %}
