--- a/5. catalog/templates/login.html
+++ b/5. catalog/templates/login.html
@@ -4,37 +4,36 @@
 <head>
 
   <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
   </script>
 
-<script src="//apis.google.com/js/platform.js?onload=start"> </script>
+  <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
 <!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
-
+  <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 
 </head>
 
 
 <body>  
-
+{% include "header.html" %}
 
 <!-- GOOGLE PLUS SIGN IN BUTTON-->
 
-          
-          <div id="signinButton">
-          <span class="g-signin"
-            data-scope="openid email"
-            data-clientid="112449467307-rj7plbgidkrkcbccosga9fh04penikb6.apps.googleusercontent.com"
-            data-redirecturi="postmessage"
-            data-accesstype="offline"
-            data-cookiepolicy="single_host_origin"
-            data-callback="signInCallback"
-            data-approvalprompt="force">
-          </span>
-        </div>
-		
-<div id="result"></div>
-
+<div class = "edit_area">
+  <div id="signinButton">
+    <span class="g-signin"
+          data-scope="openid email"
+          data-clientid="112449467307-rj7plbgidkrkcbccosga9fh04penikb6.apps.googleusercontent.com"
+          data-redirecturi="postmessage"
+          data-accesstype="offline"
+          data-cookiepolicy="single_host_origin"
+          data-callback="signInCallback"
+          data-approvalprompt="force">
+    </span>
+  </div>
+  <div id="result"></div>
+</div>
 <script>
 function signInCallback(authResult) {
   if (authResult['code']) {
@@ -68,7 +67,7 @@ function signInCallback(authResult) {
 
 
 <!--END GOOGLE PLUS SIGN IN BUTTON -->
-
+{% include "footer.html" %}
   </body>
 
-  </html>
+</html>
