--- a/5. catalog/templates/newGenre.html
+++ b/5. catalog/templates/newGenre.html
@@ -1,25 +1,17 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>New Genre</h1>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col-md-6 col-md-offset-1 padding-top">
+
+<h1>New Genre</h1>
+
+	<div class="edit_area">
 			<form action="#" method = "post">
-				<div class="form-group">
 				<label for="name">Name:</label>
 				<input type ="text" class="form-control" maxlength="100" name="name">
-				<div class="padding-bottom"></div>
-				<button type="submit" class="btn btn-default" id="submit" type="submit">
-				<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Create</button>
-				</div>
+				<button type="submit" class="button" id="submit" type="submit">
+				Create
+				</button>
 			</form>
-		</div>
 	</div>
+{% include "footer.html" %}
 {% endblock %}
