--- a/5. catalog/templates/publicalbums.html
+++ b/5. catalog/templates/publicalbums.html
@@ -1,57 +1,33 @@
 {% extends "main.html" %}
 {% block content %}
 {% include "header.html" %}
-	<div class="row divider green">
-		<div class="col-md-12"></div>
-	</div>
-	<div class="row banner menu">
-		<div class="col-md-11 col-md-offset-1 padding-none">
-			<h1>{{ genre.name }}
-			</h1>
-
-		</div>
-	</div>
+<div class = "title_block">
+	<h1 class = "page_title"><span>&#9733 {{ genre.name }} &#9733</span></h1>
+</div>
 
 <div class = 'flash'>
-		      {% with messages = get_flashed_messages() %}
-      {% if messages %}
+	{% with messages = get_flashed_messages() %}
+      	{% if messages %}
           
         <ul>
-        {% for message in messages %}
-            <li> <strong> {{ message }} </strong> </li>
-        {% endfor %}
+        	{% for message in messages %}
+            	<li> <strong> {{ message }} </strong> </li>
+        	{% endfor %}
         </ul>
         {% endif %}
     {% endwith %}
-
-</div>
-	<div class="row padding-top padding-bottom">
-		<div class="col-md-1"></div>
-		<div class="col-md-11 padding-none">
-			<br/>
-			<br/>
-		</div>
-		<div class="col-md-7"></div>
-	</div>
-	
+</div>	
 	{% if albums !=[] %}	
-		<div class="row">
-			<div class="col-md-1"></div>
-			<div class="col-md-3">
-					{% for i in albums %}
-							<div class="menu-item">
-								<h3>{{i.name}}</h3>
-								<p>Added by: {{i.user.name}}</p>
-								<p>{{i.artist}}</p>
-								<p>{{i.year}}</p>
-								<img src='{{i.image_address}}'>
-								<p>{{i.description}}</p>
-
-							</div>
-					{% endfor %}
+		{% for i in albums %}
+			<div class="albums">
+				<h2>{{i.name}}</h2>
+				<p>Added by: {{i.user.name}}</p>
+				<p>{{i.artist}}</p>
+				<p>{{i.year}}</p>
+				<img class = "album_cover" src='{{i.image_address}}'>
+				<p class="Description">Description: {{i.description}}</p>
 			</div>
-			
-			</div>
-			<div class="col-md-1"></div>
+		{% endfor %}
 	{% endif %}
+{% include "footer.html" %}
 {% endblock %}
