--- a/5. catalog/templates/deletegenre.html
+++ b/5. catalog/templates/deletegenre.html
@@ -6,8 +6,8 @@
 <form action="#" method = 'post'>
 	<div class="edit_area">
 		<button type="submit" class="button" id="submit" type="submit">Delete</button>
-		<a href = '{{url_for('showGenre')}}'>
-			<button class="button">Cancel</button>
+		<a href = '{{url_for('showGenre')}}' class="button">
+			Cancel
 		</a>
 	</div>
 </form>
