--- a/5. catalog/templates/editalbum.html
+++ b/5. catalog/templates/editalbum.html
@@ -31,10 +31,8 @@
 		<button type="submit" class="btn btn-default" id="submit" type="submit">
 		Save
 		</button>
-		<a href = "{{url_for('showGenre')}}">
-			<button class="button">
-				Cancel
-			</button>
+		<a href = "{{url_for('showGenre')}}" class="button">
+			Cancel
 		</a>
 	</form>
 </div>
