--- a/5. catalog/templates/editgenre.html
+++ b/5. catalog/templates/editgenre.html
@@ -7,8 +7,8 @@
 					<label for="name">Name:</label>
 					<input type ="text" class="form-control" name="name" value="{{genre.name }}">
 					<button type="submit" class="button" id="submit" type="submit">Save</button>
-					<a href = '{{url_for('showGenre')}}'>
-						<button class="button"> Cancel</button>
+					<a href = '{{url_for('showGenre')}}' class="button">
+						Cancel
 					</a>
 			</form>
 	</div>
