--- a/5. catalog/templates/footer.html
+++ b/5. catalog/templates/footer.html
@@ -6,6 +6,6 @@
 		</a>
 	</li>
 	<li style = "float:right" class="nav">
-		<a href="https://github.com/keyejia"> Source code </a>
+		<a href="https://github.com/keyejia/Full-Stack-development-projects/tree/master/5.%20catalog"> Source code </a>
 	</li>
 </ul>
