--- a/5. catalog/templates/deletealbum.html
+++ b/5. catalog/templates/deletealbum.html
@@ -7,10 +7,8 @@
 		<button type="submit" class="button" id="submit" type="submit">
 			Delete
 		</button>
-		<a href = '{{url_for('showGenre')}}'>
-			<button class="button">
-				Cancel
-			</button>
+		<a href = '{{url_for('showGenre')}}' class="button">
+			Cancel
 		</a>
 	</form>
 </div>
